welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:17: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:36: error: Unmatched closing brace '}' ignored here
}
^