welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
  while (!estSurBiscuit()) {
    while (isFacingTrail() and !porteBiscuit()) {
      avance()
      if (estSurBiscuit()) {
        prendBiscuit()
      }
      }
      baisseBrosse()
      leveBrosse()
    }
    droite()
  }
}

def isFacingTrail():Boolean = {
  if (estFaceMur()) {
    return false
  }
  	else {
  	avance()
  	if (getCouleurSol()==Color.green) {
    	recule()
    	return true
  	}
  	else {
    	recule()
    	return false
  	}
  }
}

